--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -227,4 +227,44 @@
     <string name="extended_network_label">Extended Network</string>
     <string name="level_format_label">Level %d</string>
     <string name="you_label">You</string>
+
+    <!-- ReminderScheduler -->
+    <string name="reminder_description_format">Contact: %1$s\n\n%2$s</string>
+    <string name="reminder_description_contact_only">Contact: %s</string>
+    <string name="log_calendar_opened">Opened Calendar app to add reminder: %s</string>
+    <string name="log_calendar_failed">Failed to open Calendar app</string>
+    <string name="error_no_calendar_app">No calendar app available</string>
+
+    <!-- ImageUtils -->
+    <string name="log_error_copying_image">Error copying image</string>
+    <string name="log_error_closing_input_stream">Error closing input stream</string>
+    <string name="log_error_closing_output_stream">Error closing output stream</string>
+    <string name="log_error_deleting_photo">Error deleting photo</string>
+
+    <!-- Repository Error Messages -->
+    <string name="error_user_not_logged_in">User not logged in</string>
+    <string name="log_error_parsing_reminder">Error parsing reminder</string>
+    <string name="log_error_parsing_contact">Error parsing contact</string>
+    <string name="log_error_parsing_interaction">Error parsing interaction</string>
+    <string name="log_error_parsing_tag">Error parsing tag</string>
+
+    <!-- Default Tags -->
+    <string name="default_tag_close_friend">Close Friend</string>
+    <string name="default_tag_family">Family</string>
+    <string name="default_tag_classmate">Classmate</string>
+    <string name="default_tag_colleague">Colleague</string>
+    <string name="default_tag_business">Business</string>
+    <string name="default_tag_mentor">Mentor</string>
+    <string name="default_tag_vc_investor">VC Investor</string>
+    <string name="default_tag_entrepreneur">Entrepreneur</string>
+
+    <!-- Auth Error Messages -->
+    <string name="error_sign_up_failed">Sign up failed</string>
+    <string name="error_sign_in_failed">Sign in failed</string>
+    <string name="error_password_reset_failed">Password reset failed</string>
+    <string name="success_password_reset_email_sent">Password reset email sent! Please check your inbox and spam folder.</string>
+
+    <!-- Date Format Patterns -->
+    <string name="date_format_short">MMM dd, yyyy</string>
+    <string name="date_format_with_time">MMM dd, yyyy hh:mm a</string>
 </resources>
