some issues are fixed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -267,4 +267,5 @@
     <!-- Date Format Patterns -->
     <string name="date_format_short">MMM dd, yyyy</string>
     <string name="date_format_with_time">MMM dd, yyyy hh:mm a</string>
+    <string name="privacy_url">https://worldvisionsoft.com/glam-photo-editor-policy/</string>
 </resources>
